--- a/public/css/app.css
+++ b/public/css/app.css
@@ -552,6 +552,9 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
@@ -582,17 +585,11 @@ video {
 .\!w-32 {
   width: 8rem !important;
 }
-.w-64 {
-  width: 16rem;
+.w-72 {
+  width: 18rem;
 }
 .w-full {
   width: 100%;
-}
-.w-6 {
-  width: 1.5rem;
-}
-.w-72 {
-  width: 18rem;
 }
 .max-w-\[500px\] {
   max-width: 500px;
@@ -669,42 +666,24 @@ video {
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded-md {
-  border-radius: 0.375rem;
-}
 .border {
   border-width: 1px;
 }
 .border-2 {
   border-width: 2px;
 }
-.border-r {
-  border-right-width: 1px;
-}
-.border-r-2 {
-  border-right-width: 2px;
-}
 .border-r-4 {
   border-right-width: 4px;
+}
+.border-transparent {
+  border-color: transparent;
 }
 .border-zinc-900\/20 {
   border-color: rgb(24 24 27 / 0.2);
 }
-.border-r-blue-500 {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
-}
-.border-r-blue-300 {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(147 197 253 / var(--tw-border-opacity, 1));
-}
 .border-r-blue-600 {
   --tw-border-opacity: 1;
   border-right-color: rgb(37 99 235 / var(--tw-border-opacity, 1));
-}
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 .bg-sky-900 {
   --tw-bg-opacity: 1;
@@ -716,6 +695,10 @@ video {
 }
 .bg-zinc-100\/50 {
   background-color: rgb(244 244 245 / 0.5);
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -748,16 +731,13 @@ video {
 .p-8 {
   padding: 2rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.pl-4 {
-  padding-left: 1rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .text-center {
   text-align: center;
@@ -768,10 +748,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -785,6 +761,10 @@ video {
 }
 .font-semibold {
   font-weight: 600;
+}
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -855,14 +835,20 @@ video {
 /* Hover effect */
 ::-webkit-scrollbar-thumb:hover {
     background: #3b82f6;
-}
+}   
+
+[x-cloak] {
+    display: none !important;
+}   
+
 .hover\:text-blue-500:hover {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
+}   
+
 @media (min-width: 640px) {
 
   .sm\:block {
     display: block;
   }
-}   
+}
