--- a/public/css/app.css
+++ b/public/css/app.css
@@ -538,6 +538,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.z-50 {
+  z-index: 50;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -560,12 +563,6 @@ video {
 }
 .mt-4 {
   margin-top: 1rem;
-}
-.mt-20 {
-  margin-top: 5rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
 }
 .block {
   display: block;
@@ -591,8 +588,18 @@ video {
   width: 100%;
   height: 100%;
 }
+.size-0 {
+  width: 0px;
+  height: 0px;
+}
 .\!h-32 {
   height: 8rem !important;
+}
+.\!h-4 {
+  height: 1rem !important;
+}
+.\!h-5 {
+  height: 1.25rem !important;
 }
 .h-5 {
   height: 1.25rem;
@@ -603,14 +610,17 @@ video {
 .h-screen {
   height: 100vh;
 }
-.\!h-4 {
-  height: 1rem !important;
-}
-.\!h-5 {
-  height: 1.25rem !important;
-}
 .\!w-32 {
   width: 8rem !important;
+}
+.\!w-4 {
+  width: 1rem !important;
+}
+.\!w-5 {
+  width: 1.25rem !important;
+}
+.w-16 {
+  width: 4rem;
 }
 .w-5 {
   width: 1.25rem;
@@ -620,24 +630,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-11 {
-  width: 2.75rem;
-}
-.w-16 {
-  width: 4rem;
-}
-.w-12 {
-  width: 3rem;
-}
-.w-14 {
-  width: 3.5rem;
-}
-.\!w-4 {
-  width: 1rem !important;
-}
-.\!w-5 {
-  width: 1.25rem !important;
 }
 .max-w-\[500px\] {
   max-width: 500px;
@@ -696,20 +688,14 @@ video {
 .cursor-default {
   cursor: default;
 }
-.flex-row {
-  flex-direction: row;
-}
 .flex-col {
   flex-direction: column;
-}
-.items-start {
-  align-items: flex-start;
 }
 .items-center {
   align-items: center;
 }
-.justify-start {
-  justify-content: flex-start;
+.justify-normal {
+  justify-content: normal;
 }
 .justify-end {
   justify-content: flex-end;
@@ -791,13 +777,18 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
-.bg-blue-500 {
+.bg-zinc-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+.bg-zinc-900\/20 {
+  background-color: rgb(24 24 27 / 0.2);
+}
+.bg-zinc-900\/10 {
+  background-color: rgb(24 24 27 / 0.1);
+}
+.bg-zinc-900\/30 {
+  background-color: rgb(24 24 27 / 0.3);
 }
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -829,9 +820,6 @@ video {
 }
 .p-8 {
   padding: 2rem;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .px-2 {
   padding-left: 0.5rem;
